# ExchangeDemo

./: .gitignore  CMakeLists.txt  README.md  Server.cpp  Server.h  TestClient.cpp  TestClient.h  TradeEngine.cpp  TradeEngine.h  TradeEngineConfig.h.in  Types.cpp  Types.h  main.cpp
Docs/: ProgrammingExercise (4).docx
IO/: inputFile.csv  outputFile.csv
